--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <p class="lead my-1">
             Cloud Hosting like you have never seen. Fast, effecient and scalable
           </p>
-          <a href="features.html" class="btn btn-dark">Read More</a>
+          <a href="features.html" class="btn btn-outline">Read More</a>
         </div>
         <img src="images/cloud.png" alt="Logo image of a cloud" />
       </div>
